# fluxgraph

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements-lock.txt  requirements.txt  vcpkg.json
.github/workflows/: ci.yml  numerical-validation-evidence.yml
cmake/: fluxgraphConfig.cmake.in
docs/: .indexignore  API.md  ARCHITECTURE.md  BENCHMARKS.md  EMBEDDING.md  JSON_SCHEMA.md  README.md  TRANSFORMS.md  YAML_SCHEMA.md  api-reference.md  dependencies.md  dev-notes.md  graph-visualization.md  index.md  numerical-methods.md  performance-benchmarks.md  schema-json.md  schema-yaml.md  semantics_spec.md  validation-methodology.md
examples/: CMakeLists.txt  README.md
examples/01_basic_transform/: CMakeLists.txt  main.cpp
examples/02_thermal_mass/: CMakeLists.txt  main.cpp
examples/03_json_graph/: CMakeLists.txt  graph.json  main.cpp
examples/04_yaml_graph/: CMakeLists.txt  graph.yaml  main.cpp
examples/05_thermal_rc2/: CMakeLists.txt  main.cpp
examples/06_first_order_process/: CMakeLists.txt  main.cpp
examples/07_second_order_process/: CMakeLists.txt  main.cpp
examples/08_mass_spring_damper/: CMakeLists.txt  main.cpp
examples/09_dc_motor/: CMakeLists.txt  main.cpp
include/fluxgraph/: command.hpp  engine.hpp  version.hpp
include/fluxgraph/core/: namespace.hpp  signal_store.hpp  types.hpp
include/fluxgraph/graph/: compiler.hpp  spec.hpp
include/fluxgraph/loaders/: json_loader.hpp  yaml_loader.hpp
include/fluxgraph/model/: dc_motor.hpp  first_order_process.hpp  integration.hpp  interface.hpp  mass_spring_damper.hpp  second_order_process.hpp  state_space_siso_discrete.hpp  thermal_integration.hpp  thermal_mass.hpp  thermal_rc2.hpp
include/fluxgraph/transform/: deadband.hpp  delay.hpp  first_order_lag.hpp  interface.hpp  linear.hpp  moving_average.hpp  noise.hpp  rate_limiter.hpp  saturation.hpp
include/fluxgraph/viz/: dot_emitter.hpp  format.hpp  graphviz_renderer.hpp
proto/: fluxgraph.proto
scripts/: README.md  bench.ps1  bench.sh  build.ps1  build.sh  evaluate_benchmarks.py  format_cpp.ps1  format_cpp.sh  generate-proto-python.ps1  generate-proto-python.sh  generate_proto_python.ps1  generate_proto_python.sh  generate_python_bindings.py  run-server.ps1  run-server.sh  run_benchmarks.py  run_numerical_validation.py  run_server.ps1  run_server.sh  test.ps1  test.sh
server/: CMakeLists.txt  main.cpp  service.cpp  service.hpp
src/: engine.cpp
src/core/: namespace.cpp  signal_store.cpp  units.cpp
src/graph/: compiler.cpp
src/graph/compiler/: algorithms.cpp  algorithms.hpp  common.cpp  common.hpp  dimensional.cpp  dimensional.hpp  registry.cpp  registry.hpp  registry_builtins.hpp  registry_common.cpp  registry_models_control.cpp  registry_models_electromechanical.cpp  registry_models_mechanical.cpp  registry_models_state_space.cpp  registry_models_thermal.cpp  registry_transforms.cpp
src/loaders/: json_loader.cpp  yaml_loader.cpp
src/model/: dc_motor.cpp  first_order_process.cpp  mass_spring_damper.cpp  second_order_process.cpp  stability_common.hpp  state_space_siso_discrete.cpp  thermal_integration.cpp  thermal_mass.cpp  thermal_rc2.cpp
tests/: CMakeLists.txt  conftest.py  test_grpc_integration.py  test_server.py
tests/analytical/: dc_motor_analytical_test.cpp  delay_analytical_test.cpp  first_order_lag_analytical_test.cpp  first_order_process_analytical_test.cpp  mass_spring_damper_analytical_test.cpp  second_order_process_analytical_test.cpp  state_space_siso_discrete_analytical_test.cpp  thermal_mass_analytical_test.cpp  thermal_rc2_analytical_test.cpp  transform_analytical_test.cpp
tests/benchmarks/: CMakeLists.txt  json_loader_bench.cpp  namespace_bench.cpp  signal_store_bench.cpp  tick_bench.cpp  yaml_loader_bench.cpp
tests/integration/: CMakeLists.txt  determinism_test.cpp  multi_model_test.cpp  test_grpc_server.py
tests/unit/: command_test.cpp  compiler_test.cpp  dc_motor_test.cpp  engine_test.cpp  first_order_process_test.cpp  json_loader_test.cpp  mass_spring_damper_test.cpp  namespace_test.cpp  second_order_process_test.cpp  signal_store_test.cpp  state_space_siso_discrete_test.cpp  thermal_mass_test.cpp  thermal_rc2_test.cpp  transform_deadband_test.cpp  transform_delay_test.cpp  transform_lag_test.cpp  transform_linear_test.cpp  transform_moving_average_test.cpp  transform_noise_test.cpp  transform_rate_limiter_test.cpp  transform_saturation_test.cpp  unit_registry_test.cpp  viz_dot_emitter_test.cpp  viz_dot_golden_test.cpp  viz_format_test.cpp  viz_graphviz_renderer_test.cpp  yaml_loader_test.cpp
tests/validation/: CMakeLists.txt  thermal_mass_validation.cpp
tools/viz_core/: dot_emitter.cpp
