# Usage Examples
#
# Example 1: Basic transform - Shows fundamental API (manual graph composition)
# Example 2: Thermal mass - Realistic physics simulation with models
# Example 3: JSON loader - Load graph from JSON file (requires -DFLUXGRAPH_JSON_ENABLED=ON)
# Example 4: YAML loader - Load graph from YAML file (requires -DFLUXGRAPH_YAML_ENABLED=ON)

add_subdirectory(01_basic_transform)
add_subdirectory(02_thermal_mass)
add_subdirectory(03_json_graph)
add_subdirectory(04_yaml_graph)
